Replace removeLast and getFirst.